[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Base/InteractObject.gd" type="Script" id=1]
[ext_resource path="res://Assets/Zelda-pack/objects.png" type="Texture" id=2]


[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 7, 8.5 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 46.9731, 128.435, 15.1288, 14.4473 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4.1131, 2 )

[node name="InteractiveObject" type="Sprite"]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 4 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
script = ExtResource( 1 )

[node name="InteractBaloom" type="Sprite" parent="StaticBody2D"]
position = Vector2( 0, -14 )
texture = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 0, 0.34375 )
shape = SubResource( 3 )

[connection signal="body_entered" from="Area2D" to="StaticBody2D" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="StaticBody2D" method="_on_Area2D_body_exited"]
